fix: prevent nav link text from wrapping in sidebar

--- a/Backoffice/Components/Layout/NavMenu.razor.css
+++ b/Backoffice/Components/Layout/NavMenu.razor.css
@@ -71,7 +71,9 @@
         height: 3rem;
         display: flex;
         align-items: center;
-        line-height: 3rem;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
         width: 100%;
     }
 
